// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Toaster renders correctly with all kind of toast 1`] = `
[
  .cache-9rv6mx-StyledContainer-alertStyles-StyledAlert {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 4px;
  padding: 12px;
  background-color: #e1ebff;
  color: #1a4dbf;
  padding: 0;
}

.cache-iv2u1e-StyledIcon-sizeStyles-StyledIcon {
  vertical-align: middle;
  fill: currentColor;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
  margin-right: 16px;
}

.cache-db05j6-AlertContainer {
  color: inherit;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.cache-1sluwr9-StyledText-InheritedColorText {
  color: #4a4f62;
  font-size: 16px;
  font-family: Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: inherit;
}

<div
    class="Toastify__toast-body"
    role="alert"
  >
    <div>
      <div
        class="e1txm9iz0 cache-9rv6mx-StyledContainer-alertStyles-StyledAlert eenhiht3"
      >
        <svg
          class="eenhiht2 cache-iv2u1e-StyledIcon-sizeStyles-StyledIcon etwatq50"
          viewBox="0 0 24 24"
        >
          <path
            d="M11,9H13V7H11M12,20C7.59,20 4,16.41 4,12C4,7.59 7.59,4 12,4C16.41,4 20,7.59 20,12C20,16.41 16.41,20 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2M11,17H13V11H11V17Z"
          />
        </svg>
        <div
          class="cache-db05j6-AlertContainer eenhiht1"
        >
          <p
            class="eenhiht0 cache-1sluwr9-StyledText-InheritedColorText e1tg3t120"
          >
            This is an info
          </p>
        </div>
      </div>
    </div>
  </div>,
  .cache-121pcd0-StyledContainer-alertStyles-StyledAlert {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 4px;
  padding: 12px;
  background-color: #eafffb;
  color: #149a7b;
  padding: 0;
}

.cache-iv2u1e-StyledIcon-sizeStyles-StyledIcon {
  vertical-align: middle;
  fill: currentColor;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
  margin-right: 16px;
}

.cache-db05j6-AlertContainer {
  color: inherit;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.cache-1sluwr9-StyledText-InheritedColorText {
  color: #4a4f62;
  font-size: 16px;
  font-family: Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: inherit;
}

<div
    class="Toastify__toast-body"
    role="alert"
  >
    <div>
      <div
        class="e1txm9iz0 cache-121pcd0-StyledContainer-alertStyles-StyledAlert eenhiht3"
      >
        <svg
          class="eenhiht2 cache-iv2u1e-StyledIcon-sizeStyles-StyledIcon etwatq50"
          viewBox="0 0 24 24"
        >
          <path
            d="M20,12A8,8 0 0,1 12,20A8,8 0 0,1 4,12A8,8 0 0,1 12,4C12.76,4 13.5,4.11 14.2,4.31L15.77,2.74C14.61,2.26 13.34,2 12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12M7.91,10.08L6.5,11.5L11,16L21,6L19.59,4.58L11,13.17L7.91,10.08Z"
          />
        </svg>
        <div
          class="cache-db05j6-AlertContainer eenhiht1"
        >
          <p
            class="eenhiht0 cache-1sluwr9-StyledText-InheritedColorText e1tg3t120"
          >
            This is a success
          </p>
        </div>
      </div>
    </div>
  </div>,
  .cache-1sxr3vi-StyledContainer-alertStyles-StyledAlert {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 4px;
  padding: 12px;
  background-color: #ffe1e7;
  color: #a6102d;
  padding: 0;
}

.cache-iv2u1e-StyledIcon-sizeStyles-StyledIcon {
  vertical-align: middle;
  fill: currentColor;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
  margin-right: 16px;
}

.cache-db05j6-AlertContainer {
  color: inherit;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.cache-1sluwr9-StyledText-InheritedColorText {
  color: #4a4f62;
  font-size: 16px;
  font-family: Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: inherit;
}

<div
    class="Toastify__toast-body"
    role="alert"
  >
    <div>
      <div
        class="e1txm9iz0 cache-1sxr3vi-StyledContainer-alertStyles-StyledAlert eenhiht3"
      >
        <svg
          class="eenhiht2 cache-iv2u1e-StyledIcon-sizeStyles-StyledIcon etwatq50"
          viewBox="0 0 24 24"
        >
          <path
            d="M13,14H11V10H13M13,18H11V16H13M1,21H23L12,2L1,21Z"
          />
        </svg>
        <div
          class="cache-db05j6-AlertContainer eenhiht1"
        >
          <p
            class="eenhiht0 cache-1sluwr9-StyledText-InheritedColorText e1tg3t120"
          >
            This is an error
          </p>
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`Toaster renders correctly with all kind of toast 2`] = `
<DocumentFragment>
  .cache-m8efeg-toast {
  border-radius: 4px;
  box-shadow: none;
  min-height: 44px;
}

.cache-m8efeg-toast .Toastify__toast-body {
  margin: 0;
  padding: 0;
}

.cache-m8efeg-toast.Toastify__toast--success {
  background-color: #eafffb;
  color: #149a7b;
}

.cache-m8efeg-toast.Toastify__toast--success .Toastify__progress-bar {
  background-color: #22c8a2;
}

.cache-m8efeg-toast.Toastify__toast--info {
  background-color: #e1ebff;
  color: #1a4dbf;
}

.cache-m8efeg-toast.Toastify__toast--info .Toastify__progress-bar {
  background-color: #3f6ed8;
}

.cache-m8efeg-toast.Toastify__toast--error {
  background-color: #ffe1e7;
  color: #a6102d;
}

.cache-m8efeg-toast.Toastify__toast--error .Toastify__progress-bar {
  background-color: #dd3252;
}

.cache-9rv6mx-StyledContainer-alertStyles-StyledAlert {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 4px;
  padding: 12px;
  background-color: #e1ebff;
  color: #1a4dbf;
  padding: 0;
}

.cache-iv2u1e-StyledIcon-sizeStyles-StyledIcon {
  vertical-align: middle;
  fill: currentColor;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
  margin-right: 16px;
}

.cache-db05j6-AlertContainer {
  color: inherit;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.cache-1sluwr9-StyledText-InheritedColorText {
  color: #4a4f62;
  font-size: 16px;
  font-family: Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: inherit;
}

.cache-rfv5sc-StyledIcon-sizeStyles-IconWithLeftMargin {
  vertical-align: middle;
  fill: currentColor;
  height: 18px;
  width: 18px;
  min-width: 18px;
  min-height: 18px;
  margin-left: 8px;
}

.cache-121pcd0-StyledContainer-alertStyles-StyledAlert {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 4px;
  padding: 12px;
  background-color: #eafffb;
  color: #149a7b;
  padding: 0;
}

.cache-1sxr3vi-StyledContainer-alertStyles-StyledAlert {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 4px;
  padding: 12px;
  background-color: #ffe1e7;
  color: #a6102d;
  padding: 0;
}

<div
    class="Toastify"
  >
    <div
      class="Toastify__toast-container Toastify__toast-container--top-right"
    >
      <div
        class="Toastify__toast Toastify__toast-theme--light Toastify__toast--info cache-m8efeg-toast Toastify--animate Toastify__bounce-enter--top-right"
        id="info"
        style="--nth: 1; --len: 3;"
      >
        <div
          class="Toastify__toast-body"
          role="alert"
        >
          <div>
            <div
              class="e1txm9iz0 cache-9rv6mx-StyledContainer-alertStyles-StyledAlert eenhiht3"
            >
              <svg
                class="eenhiht2 cache-iv2u1e-StyledIcon-sizeStyles-StyledIcon etwatq50"
                viewBox="0 0 24 24"
              >
                <path
                  d="M11,9H13V7H11M12,20C7.59,20 4,16.41 4,12C4,7.59 7.59,4 12,4C16.41,4 20,7.59 20,12C20,16.41 16.41,20 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2M11,17H13V11H11V17Z"
                />
              </svg>
              <div
                class="cache-db05j6-AlertContainer eenhiht1"
              >
                <p
                  class="eenhiht0 cache-1sluwr9-StyledText-InheritedColorText e1tg3t120"
                >
                  This is an info
                </p>
              </div>
            </div>
          </div>
        </div>
        <svg
          class="e1txm9iz1 cache-rfv5sc-StyledIcon-sizeStyles-IconWithLeftMargin etwatq50"
          viewBox="0 0 24 24"
        >
          <path
            d="M19,6.41L17.59,5L12,10.59L6.41,5L5,6.41L10.59,12L5,17.59L6.41,19L12,13.41L17.59,19L19,17.59L13.41,12L19,6.41Z"
          />
        </svg>
        <div
          aria-hidden="false"
          aria-label="notification timer"
          class="Toastify__progress-bar Toastify__progress-bar--animated Toastify__progress-bar-theme--light Toastify__progress-bar--info"
          role="progressbar"
          style="animation-duration: 6000ms; animation-play-state: paused; opacity: 1;"
        />
      </div>
      <div
        class="Toastify__toast Toastify__toast-theme--light Toastify__toast--success cache-m8efeg-toast Toastify--animate Toastify__bounce-enter--top-right"
        id="success"
        style="--nth: 2; --len: 3;"
      >
        <div
          class="Toastify__toast-body"
          role="alert"
        >
          <div>
            <div
              class="e1txm9iz0 cache-121pcd0-StyledContainer-alertStyles-StyledAlert eenhiht3"
            >
              <svg
                class="eenhiht2 cache-iv2u1e-StyledIcon-sizeStyles-StyledIcon etwatq50"
                viewBox="0 0 24 24"
              >
                <path
                  d="M20,12A8,8 0 0,1 12,20A8,8 0 0,1 4,12A8,8 0 0,1 12,4C12.76,4 13.5,4.11 14.2,4.31L15.77,2.74C14.61,2.26 13.34,2 12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12M7.91,10.08L6.5,11.5L11,16L21,6L19.59,4.58L11,13.17L7.91,10.08Z"
                />
              </svg>
              <div
                class="cache-db05j6-AlertContainer eenhiht1"
              >
                <p
                  class="eenhiht0 cache-1sluwr9-StyledText-InheritedColorText e1tg3t120"
                >
                  This is a success
                </p>
              </div>
            </div>
          </div>
        </div>
        <svg
          class="e1txm9iz1 cache-rfv5sc-StyledIcon-sizeStyles-IconWithLeftMargin etwatq50"
          viewBox="0 0 24 24"
        >
          <path
            d="M19,6.41L17.59,5L12,10.59L6.41,5L5,6.41L10.59,12L5,17.59L6.41,19L12,13.41L17.59,19L19,17.59L13.41,12L19,6.41Z"
          />
        </svg>
        <div
          aria-hidden="false"
          aria-label="notification timer"
          class="Toastify__progress-bar Toastify__progress-bar--animated Toastify__progress-bar-theme--light Toastify__progress-bar--success"
          role="progressbar"
          style="animation-duration: 6000ms; animation-play-state: paused; opacity: 1;"
        />
      </div>
      <div
        class="Toastify__toast Toastify__toast-theme--light Toastify__toast--error cache-m8efeg-toast Toastify--animate Toastify__bounce-enter--top-right"
        id="error"
        style="--nth: 3; --len: 3;"
      >
        <div
          class="Toastify__toast-body"
          role="alert"
        >
          <div>
            <div
              class="e1txm9iz0 cache-1sxr3vi-StyledContainer-alertStyles-StyledAlert eenhiht3"
            >
              <svg
                class="eenhiht2 cache-iv2u1e-StyledIcon-sizeStyles-StyledIcon etwatq50"
                viewBox="0 0 24 24"
              >
                <path
                  d="M13,14H11V10H13M13,18H11V16H13M1,21H23L12,2L1,21Z"
                />
              </svg>
              <div
                class="cache-db05j6-AlertContainer eenhiht1"
              >
                <p
                  class="eenhiht0 cache-1sluwr9-StyledText-InheritedColorText e1tg3t120"
                >
                  This is an error
                </p>
              </div>
            </div>
          </div>
        </div>
        <svg
          class="e1txm9iz1 cache-rfv5sc-StyledIcon-sizeStyles-IconWithLeftMargin etwatq50"
          viewBox="0 0 24 24"
        >
          <path
            d="M19,6.41L17.59,5L12,10.59L6.41,5L5,6.41L10.59,12L5,17.59L6.41,19L12,13.41L17.59,19L19,17.59L13.41,12L19,6.41Z"
          />
        </svg>
        <div
          aria-hidden="false"
          aria-label="notification timer"
          class="Toastify__progress-bar Toastify__progress-bar--animated Toastify__progress-bar-theme--light Toastify__progress-bar--error"
          role="progressbar"
          style="animation-duration: 6000ms; animation-play-state: paused; opacity: 1;"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;
